--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
                 </figure>
             </article>
         </section>
-        <section>seccion de contacto</section>
+        <section>
+            <form action="/suscripcion/">
+                <h3>¿Creamos algo juntos?</h3>
+                <input type="text" placeholder="Déjame tu email" id="email"/>
+                <button>Enviar</button>
+            </form>
+        </section>
         <footer>footer</footer>
     </body>
 </html>
