Agregado de estilos con CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <title>Ing. Efrain Hernandez</title>
         <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simple_icon_location.svg/600px-Simple_icon_location.svg.png">
+        <link rel="stylesheet" href="css/estilos.css">
+        <style>
+            header {
+                background: green;
+            }
+        </style>
     </head>
     <body>
         <header>
