Agregamos algunos comentarios sobre CSS y sus reglas

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
         <title>Ing. Efrain Hernandez</title>
         <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simple_icon_location.svg/600px-Simple_icon_location.svg.png">
         <link rel="stylesheet" href="css/estilos.css">
-        <style>
-            header {
-                background: green;
-            }
-        </style>
     </head>
     <body>
         <header>
@@ -21,13 +16,13 @@
             <nav>
                 <ol>
                     <li>
-                        <a href="#portafolio">Portafolio</a>
+                        <a class="link" href="#portafolio">Portafolio</a>
                     </li>
                     <li>
-                        <a href="#exp">Experencia</a>
+                        <a class="link" href="#exp">Experencia</a>
                     </li>
                     <li>
-                        <a href="#contacto">Trabajemos juntos</a>
+                        <a class="link" href="#contacto">Trabajemos juntos</a>
                     </li>
                 </ol>
             </nav>
