Añadimos estilos de fuente CSS y corregimos el hero

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Ing. Efrain Hernandez</title>
         <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simple_icon_location.svg/600px-Simple_icon_location.svg.png">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
@@ -29,7 +30,8 @@
         </header>
         <section class="hero">
             <h1>
-                Hola! Soy <strong>Efraín Hernández </strong>Desarrollador<br/><strong>JavaScript</strong>
+                Hola! Soy <strong>Efraín Hernández </strong><br/>Desarrollador<strong> JavaScript</strong><br/>
+                <strong>Apasionado por la Tecnología</strong>
             </h1>
             <img src="https://udemy-images.udemy.com/course/750x422/643800_5937_2.jpg" width="500" heigh="300" alt="imagen principal del sitio"/>
         </section>
