--- a/index.html
+++ b/index.html
@@ -33,18 +33,21 @@
                 Hola! Soy <strong>Efraín Hernández </strong><br/>Desarrollador<strong> JavaScript</strong><br/>
                 <strong>Apasionado por la Tecnología</strong>
             </h1>
-            <img src="https://udemy-images.udemy.com/course/750x422/643800_5937_2.jpg" width="500" heigh="300" alt="imagen principal del sitio"/>
+            <!-- <img src="https://udemy-images.udemy.com/course/750x422/643800_5937_2.jpg" width="500" heigh="300" alt="imagen principal del sitio"/> -->
         </section>
         <section id="portafolio" class="portfolio">
             <h2>Portafolio (Proyectos Destacados)</h2>
             <article class="project">
+            <div class="project-details">
                 <h3 class="project-title">Platzi Video</h3>
                 <h4 class="project-course">React Native / React</h4>
                 <p class="project-date"><small><strong>Fecha: </strong>08/02/2020</small></p>
-                <p  class="project-url"><small><strong>Puedes verlo en: </strong>platzi.com/native</small></p>
+                <p class="project-url"><small><strong>Puedes verlo en: </strong>platzi.com/native</small></p>
                 <p class="project-description">Platzi Video fue el resultado de 3 meses de Trabajemos
                     para crear la mejor app para enseñar el funcionamiento
                     de React Native.</p>
+            </div>
+                    
                 <figure class="project-imageContainer">
                     <img class="project-image" width="500" src="https://cdn.careeronestop.org/OccVids/OccupationVideos/15-1132.00.jpg" alt="Imagen del proyecto">
                 </figure>
