Primeras pruebas con Media Queries en CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>Ing. Efrain Hernandez</title>
-        <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simple_icon_location.svg/600px-Simple_icon_location.svg.png">
-        <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Simple_icon_location.svg/600px-Simple_icon_location.svg.png"/>
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="css/media.css" media="screen and (max-width:768px)"/>
+        <link rel="stylesheet" href="css/estilos.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
