Reajuste del header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ol>
             </nav>
         </header>
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="container">
             <h1>
                 Hola! Soy <strong>Efraín Hernández </strong><br/>Desarrollador<strong> JavaScript</strong><br/>
@@ -68,7 +68,7 @@
                 <div class="event-detail">
                 <h3 class="event-title">PlatziConf México</h3>
                 <p class="event-descrition">El evento más grande sobre como aprender en internet</p>
-                <!-- <a href="youtube.com">Ver Plática</a> -->
+                <a href="youtube.com">Ver Plática</a> 
                 </div>
             </article>
             <article class="event">
@@ -78,7 +78,6 @@
                 <div class="event-detail">
                 <h3 class="event-title">PlatziConf México</h3>
                 <p class="event-descrition">El evento más grande sobre como aprender en internet</p>
-                <!-- <a href="youtube.com">Ver Plática</a> -->
                 </div>
             </article>
             <article class="event">
@@ -88,7 +87,6 @@
                 <div class="event-detail">
                 <h3 class="event-title">PlatziConf México</h3>
                 <p class="event-descrition">El evento más grande sobre como aprender en internet</p>
-                <!-- <a href="youtube.com">Ver Plática</a> -->
                 </div>
             </article>
             <article class="event">
@@ -98,7 +96,6 @@
                 <div class="event-detail">
                 <h3 class="event-title">PlatziConf México</h3>
                 <p class="event-descrition">El evento más grande sobre como aprender en internet</p>
-                <!-- <a href="youtube.com">Ver Plática</a> -->
                 </div>
             </article>
         </div>
@@ -129,6 +126,6 @@
                 </div>
              </div>
             </div>
-        </footer>
+        </footer>  -->
     </body>
 </html>
