Ajuste de la sección portafolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </h1>
             <img class="hero-image" src="https://udemy-images.udemy.com/course/750x422/643800_5937_2.jpg" width="500" heigh="300" alt="imagen principal del sitio"/> 
             </div>
-        </section>
+        </section> -->
         <section id="portafolio" class="portfolio">
             <div class="container">
                 <h2>Portafolio (Proyectos Destacados)</h2>
@@ -58,7 +58,7 @@
                     </article>
                 </div>
         </section >
-        <div class="container">
+        <!-- <div class="container">
         <h2 class="event-list-title">Más sobre mi experiencia</h2>
         <section id="exp" class="event-list">
             <article class="event">
@@ -126,6 +126,6 @@
                 </div>
              </div>
             </div>
-        </footer>  -->
+        </footer> -->
     </body>
 </html>
