--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </article>
                 </div>
         </section >
-        <!-- <div class="container">
+         <div class="container">
         <h2 class="event-list-title">Más sobre mi experiencia</h2>
         <section id="exp" class="event-list">
             <article class="event">
@@ -100,7 +100,7 @@
             </article>
         </div>
         </section>
-        <section id="contacto" class="contact">
+       <!--  <section id="contacto" class="contact">
             <div class="container">
             <form action="/suscripcion/" class="form-email">
                 <h3>¿Creamos algo juntos?</h3>
@@ -126,6 +126,6 @@
                 </div>
              </div>
             </div>
-        </footer> -->
+        </footer>  -->
     </body>
 </html>
